force-app/main/default/objects/Person__c/fields/NKS_AAregisterURL__c.field-meta.xml
<CustomField>
    <fullName>NKS_AAregisterURL__c</fullName>
    <formula>HYPERLINK(&quot;https://arbeid-og-inntekt.nais.adeo.no/&quot; ,
        &quot;AA-register&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AA-register</label>
    <type>Text</type>
</CustomField>