force-app/main/default/objects/Person__c/fields/NKS_AktivitetsplanURL__c.field-meta.xml
<CustomField>
    <fullName>NKS_AktivitetsplanURL__c</fullName>
    <formula>IF( $Organization.Id = &quot;00D2o000000aANV&quot;, HYPERLINK(&quot;https://veilarbpersonflate.intern.nav.no/&quot;&amp;Name , &quot;Aktivitetsplan&quot;, &quot;_self&quot;), HYPERLINK(&quot;https://veilarbpersonflate.dev.intern.nav.no/&quot;&amp;Name, &quot;Aktivitetsplan&quot;, &quot;_self&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aktivitetsplan</label>
    <type>Text</type>
</CustomField>