force-app/main/default/objects/Person__c/fields/NKS_BarnetrygdURL__c.field-meta.xml
<CustomField>
    <fullName>NKS_BarnetrygdURL__c</fullName>
    <formula>HYPERLINK(&quot;https://barnetrygd.intern.nav.no/oppgaver&quot; ,
        &quot;Barnetrygd&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Barnetrygd</label>
    <type>Text</type>
</CustomField>