force-app/main/default/objects/Person__c/fields/NKS_EnsligForsorgerURL__c.field-meta.xml
<CustomField>
    <fullName>NKS_EnsligForsorgerURL__c</fullName>
    <formula>HYPERLINK(&quot;https://ensligmorellerfar.intern.nav.no/oppgavebenk&quot; ,
        &quot;Enslig forsørger&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enslig forsørger</label>
    <type>Text</type>
</CustomField>