force-app/main/default/objects/Person__c/fields/NKS_ForeldrepengerURL__c.field-meta.xml
<CustomField>
    <fullName>NKS_ForeldrepengerURL__c</fullName>
    <formula>IF($Organization.Id = &quot;00D5t0000004b4LEAQ&quot;, &quot;https://fpsak.dev.intern.nav.no/aktoer/&quot;&amp;INT_ActorId__c, &quot;https://fpsak.intern.nav.no/aktoer/&quot;&amp;INT_ActorId__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foreldrepenger</label>
    <type>Text</type>
</CustomField>