force-app/main/default/objects/Person__c/fields/NKS_GoSysURL__c.field-meta.xml
<CustomField>
    <fullName>NKS_GoSysURL__c</fullName>
    <description>Sjekker om ORG = UAT, hvis ikke vis link til prod.</description>
    <formula>IF( $Organization.Id = &quot;00D1l0000008jAa&quot;,
        HYPERLINK(&quot;https://gosys-q1.dev.intern.nav.no/gosys/personoversikt/fnr=&quot;&amp;Name
        , &quot;GoSys&quot;, &quot;_self&quot;),
        HYPERLINK(&quot;https://gosys.intern.nav.no/gosys/personoversikt/fnr=&quot;&amp;Name ,
        &quot;GoSys&quot;, &quot;_self&quot;)
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GoSys</label>
    <type>Text</type>
</CustomField>