force-app/main/default/objects/Person__c/fields/NKS_K9URL__c.field-meta.xml
<CustomField>
    <fullName>NKS_K9URL__c</fullName>
    <formula>HYPERLINK(&quot;https://k9.intern.nav.no/k9/web/aktoer/&quot;&amp;INT_ActorId__c , &quot;K9&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>K9</label>
    <type>Text</type>
</CustomField>