force-app/main/default/objects/Person__c/fields/NKS_ModiaURL__c.field-meta.xml
<CustomField>
    <fullName>NKS_ModiaURL__c</fullName>
    <formula>IF( $Organization.Id = &quot;00D1l0000008jAa&quot;, &quot;http://app-qx.adeo.no/modiapersonoversikt/&quot;&amp;Name , &quot;https://app.adeo.no/modiapersonoversikt/person/&quot;&amp;Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modia</label>
    <type>Text</type>
</CustomField>