force-app/main/default/objects/Person__c/fields/NKS_NumberOfSecurityMeasures__c.field-meta.xml
<CustomField>
    <fullName>NKS_NumberOfSecurityMeasures__c</fullName>
    <description>Used to set visibilty of security measures</description>
    <label>Number of Security Measures</label>
    <summaryForeignKey>SecurityMeasure__c.INT_Person__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>