force-app/main/default/objects/Person__c/fields/NKS_PESYSURL__c.field-meta.xml
<CustomField>
    <fullName>NKS_PESYSURL__c</fullName>
    <formula>HYPERLINK(&quot;https://pensjon-psak.nais.adeo.no/psak/brukeroversikt/fnr=&quot;&amp;Name
        , &quot;PESYS&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pesys</label>
    <type>Text</type>
</CustomField>