force-app/main/default/objects/Person__c/fields/NKS_SpeilURL__c.field-meta.xml
<CustomField>
    <fullName>NKS_SpeilURL__c</fullName>
    <formula>IF( $Organization.Id = &quot;00D1l0000008jAa&quot;, &quot;https://syfomodiaperson.dev.intern.nav.no/sykefravaer/personsok&quot;, &quot;https://syfomodiaperson.intern.nav.no/sykefravaer/personsok&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPEIL</label>
    <type>Text</type>
</CustomField>